add xxe, nosqli, and docker-compose

--- a/templates/command-post.html
+++ b/templates/command-post.html
@@ -8,7 +8,7 @@
   <body>
   {% block content %}
     <h1>Command Execution</h1>
-    <form action="/command" method="post">
+    <form action="/command1" method="post">
       <label for="command">Enter a command:</label>
       <input type="text" id="command" name="command">
       <input type="submit" value="Execute">
