--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -40,6 +40,10 @@
                         <a class="dropdown-item" href="login2">SQL Injection GET</a>
                         <a class="dropdown-item" href="command1">Command Injection POST</a>
                         <a class="dropdown-item" href="command2">Command Injection GET</a>
+                        <a class="dropdown-item" href="xxe1">XXE POST</a>
+                        <a class="dropdown-item" href="xxe2">XXE GET</a>
+                        <a class="dropdown-item" href="nosql1">NoSQLI POST</a>
+                        <a class="dropdown-item" href="nosql2">NoSQLI GET</a>
                     </div>
                 </li>
             </ul>
